# artificial-intelligence

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE-SUMMARY  Pipfile  README.md  conf.py  environment.yml  genindex.html  intro.html  objects.inv  prf-prf.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  system_requirements_pytorch_23_02_py3.txt
.devcontainer/: Dockerfile  Dockerfile.pytorch  Dockerfile.tensorflow  devcontainer.env  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  deploy.yml  pre-commit_autoupdate.yml  publish.yml
_sources/: intro.md
_sources/syllabus/: _index.md  index.md
aiml-common/: CODE-OF-CONDUCT.html  _index.html
aiml-common/assignments/: gaussian-processes-assignment.html  learning-problem-assignment.html  maximum-likelihood-assignment.html  probability-assignment-2.html  xgboost-dask.html
aiml-common/lectures/: _index.html  runbook.html
aiml-common/projects/: _index.html
aiml-common/resources/: _index.html  env.html
artificial_intelligence/: _config.yml  _config_lms.yml  _toc.yml  conf.py  conf_old.py  intro.md
artificial_intelligence/syllabus/: _index.md  syllabus.docx
docker/: Dockerfile.pytorch  Dockerfile.pytorch-deleteme  Dockerfile.tensorflow
files/videos/: multiObject.avi
handson-ml2/: 01_the_machine_learning_landscape.html  02_end_to_end_machine_learning_project.html  03_classification.html  04_training_linear_models.html  05_support_vector_machines.html  06_decision_trees.html  07_ensemble_learning_and_random_forests.html  08_dimensionality_reduction.html  09_unsupervised_learning.html  10_neural_nets_with_keras.html  11_training_deep_neural_networks.html  12_custom_models_and_training_with_tensorflow.html  13_loading_and_preprocessing_data.html  14_deep_computer_vision_with_cnns.html  15_processing_sequences_using_rnns_and_cnns.html  16_nlp_with_rnns_and_attention.html  17_autoencoders_and_gans.html  18_reinforcement_learning.html  19_training_and_deploying_at_scale.html  INSTALL.html  README.html  changes_in_2nd_edition.html  extra_autodiff.html  extra_gradient_descent_comparison.html  index.html  math_differential_calculus.html  math_linear_algebra.html  ml-project-checklist.html  tools_matplotlib.html  tools_numpy.html  tools_pandas.html
lite/: jupyter-lite.json
requirements/: constraints.txt  dev-requirements.txt  dev.requirements.in  dev.requirements.txt  docs.requirements.in  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
syllabus/: _index.html  index.html
(+585 files in other folders)
